# django-avatarfield

./: LICENSE  MANIFEST.in  README.md  setup.cfg
avatar_field/: apps.py  model_fields.py  widget.py
avatar_field/static/avatar_field/css/: bootstrap.css  style.css
avatar_field/templates/avatar_field/widgets/: select.html  select_option.html
