[metadata]
name = django-avatarfield
version = 0.0.1
description = A Django field to help user make avatar field.
long_description = file: README.rst
url = https://github.com/ZFCon/
author = Ziad Ahmed
author_email = ziad32ahmed111@gmail.com
license = MIT License
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find: